--- a/app/index.html
+++ b/app/index.html
@@ -531,7 +531,7 @@
 
       <div class="travel__slider">
 
-        <ul class="travel__slider-item">
+        <div class="travel__slider-item">
 
           <div class="travel-head">
             <div class="travel-head__beach"></div>
@@ -574,7 +574,7 @@
 
       <div class="sleep__slider">
 
-        <ul class="sleep__slider-item">
+        <div class="sleep__slider-item">
 
           <div class="sleep-head">
             <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort"></img>
