--- a/app/index.html
+++ b/app/index.html
@@ -578,7 +578,7 @@
 
           <div class="sleep-head">
             <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort"></img>
-            <p class="suptitle suptitle--left">Resorts</p>
+            <p class="suptitle suptitle--left sleep-head__suptitle">Resorts</p>
             <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
           </div>
 
