--- a/app/index.html
+++ b/app/index.html
@@ -534,8 +534,8 @@
         <div class="travel__slider-item">
 
           <div class="travel-head">
-            <div class="travel-head__beach"></div>
-            <p class="suptitle suptitle--left travel-suptitle">Shore</p>
+            <img src="img/travel/airlie-beach/airlie-beach.png" class="travel-head__beach" alt="beach">
+            <p class="suptitle suptitle--left travel-head__suptitle">Shore</p>
             <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
           </div>
 
