added function for plus and minus btns

--- a/app/index.html
+++ b/app/index.html
@@ -598,11 +598,11 @@
 
               <div class="sleep-info__text">
 
-                <input class="sleep-info__number" type="number" min="1" max="10" value="5" readonly>
+                <input class="sleep-info__number" type="number" min="1" max="9" value="5" readonly>
                 <span>Nights</span>
                 <div class="sleep-info__symbols">
-                  <a class="sleep-info__symbol minus" href="#"></a>
-                  <a class="sleep-info__symbol plus" href="#"></a>
+                  <div class="sleep-info__symbol minus" href="#"></div>
+                  <div class="sleep-info__symbol plus" href="#"></div>
                 </div>
               </div>
 
@@ -611,11 +611,11 @@
               <h3 class="sleep-info__title"># of Guests</h3>
               <div class="sleep-info__text">
 
-                <input class="sleep-info__number" type="number" min="1" max="10" value="4" readonly>
+                <input class="sleep-info__number" type="number" min="1" max="9" value="4" readonly>
                 <span>Guests</span>
                 <div class="sleep-info__symbols">
-                  <a class="sleep-info__symbol minus" href="#"></a>
-                  <a class="sleep-info__symbol plus" href="#"></a>
+                  <div class="sleep-info__symbol minus" href="#"></div>
+                  <div class="sleep-info__symbol plus" href="#"></div>
                 </div>
               </div>
             </li>
