added sleep price

--- a/app/index.html
+++ b/app/index.html
@@ -598,7 +598,7 @@
 
               <div class="sleep-info__text">
 
-                <input class="sleep-info__number" type="number" min="1" max="9" value="5" readonly>
+                <input class="sleep-info__number sleep-info__nights" type="number" min="1" max="9" value="5" readonly>
                 <span>Nights</span>
                 <div class="sleep-info__symbols">
                   <div class="sleep-info__symbol minus" href="#"></div>
@@ -611,7 +611,7 @@
               <h3 class="sleep-info__title"># of Guests</h3>
               <div class="sleep-info__text">
 
-                <input class="sleep-info__number" type="number" min="1" max="9" value="4" readonly>
+                <input class="sleep-info__number sleep-info__guests" type="number" min="1" max="9" value="4" readonly>
                 <span>Guests</span>
                 <div class="sleep-info__symbols">
                   <div class="sleep-info__symbol minus" href="#"></div>
@@ -621,7 +621,7 @@
             </li>
             <li class="sleep-info__item">
               <h3 class="sleep-info__title">Pricing</h3>
-              <p class="sleep-info__text">$<span class="sleep-info__price">349</span> USD</p>
+              <p class="sleep-info__text">$<span class="sleep-info__price"></span>USD</p>
               <span class="sleep-info__suptext">Per Night</span>
             </li>
           </ul>
