--- a/app/index.html
+++ b/app/index.html
@@ -621,7 +621,7 @@
             </li>
             <li class="sleep-info__item">
               <h3 class="sleep-info__title">Pricing</h3>
-              <p class="sleep-info__text">$<span class="sleep-info__price"></span>USD</p>
+              <p class="sleep-info__text"><span>$</span><span class="sleep-info__price"></span></p>
               <span class="sleep-info__suptext">Per Night</span>
             </li>
           </ul>
