added new shop section

--- a/app/index.html
+++ b/app/index.html
@@ -572,7 +572,6 @@
   <section class="sleep">
     <div class="container">
       <h2 class="title title--line travel__title">sleep<span class="title-shadow travel__title-shadow">sleep</span></h2>
-
       <div class="sleep__slider">
 
         <div class="sleep__slider-item">
@@ -591,7 +590,7 @@
           <ul class="sleep-info">
             <li class="sleep-info__item">
               <h3 class="sleep-info__title">Resort</h3>
-              <p class="sleep-info__text">Auberge Australia</p>
+              <p class="sleep-info__text">Auberge<br>Australia</p>
             </li>
             <li class="sleep-info__item">
               <h3 class="sleep-info__title"># of Nights</h3>
@@ -631,6 +630,28 @@
     </div>
   </section>
 
+  <section class="shop">
+    <div class="container">
+      <h2 class="title title--line shop__title">shop<span class="title-shadow shop__title-shadow">shop</span></h2>
+
+      <div class="shop__slider">
+        <div class="shop__slider-item">
+          <div class="shop__content">
+            <div class="shop__board-info">
+              <p class="suptitle suptitle--right">style</p>
+              <h3 class="title title--small">North Nugget TT <br>Surfboard</h3>
+              <img class="shop__stars" src="img/sleep/5stars.svg" alt="raiting">
+              <p class="shop__board-price">$799<sup>99</sup></p>
+              <a href="#" class="btn-common">drop <span>in</span></a>
+            </div>
+          </div>
+
+
+        </div>
+
+      </div>
+    </div>
+  </section>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
