work on the shop section

--- a/app/index.html
+++ b/app/index.html
@@ -644,7 +644,24 @@
               <p class="shop__board-price">$799<sup>99</sup></p>
               <a href="#" class="btn-common">drop <span>in</span></a>
             </div>
+            <div><img src="img/shop/board.png" alt="board"></div>
+            <div class="extras">
+              <p class="extras__title title title--small">extras</p>
+              <ul class="extras__list">
+                <li class="extras__item">
+                  <img src="img/shop/wax.png" alt="wax">
+                  <p class="extras__name">Sex Wax</p>
+                  <p class="extras__price">$</p>
+                </li>
+                <li class="extras__item">
+                  <img src="img/shop/bracelet.png" alt="bracelet">
+                  <p class="extras__name">Pura Vida</p>
+                  <p class="extras__price">$</p>
+                </li>
+              </ul>
+            </div>
           </div>
+          
 
 
         </div>
