--- a/app/index.html
+++ b/app/index.html
@@ -649,14 +649,14 @@
               <p class="extras__title title title--small">extras</p>
               <ul class="extras__list">
                 <li class="extras__item">
-                  <img src="img/shop/wax.png" alt="wax">
+                  <img class="extras__img" src="img/shop/wax.png" alt="wax">
                   <p class="extras__name">Sex Wax</p>
-                  <p class="extras__price">$</p>
+                  <p class="extras__price">$24.99</p>
                 </li>
                 <li class="extras__item">
-                  <img src="img/shop/bracelet.png" alt="bracelet">
+                  <img class="extras__img" src="img/shop/bracelet.png" alt="bracelet">
                   <p class="extras__name">Pura Vida</p>
-                  <p class="extras__price">$</p>
+                  <p class="extras__price">$24.99</p>
                 </li>
               </ul>
             </div>
