--- a/app/index.html
+++ b/app/index.html
@@ -644,7 +644,7 @@
               <p class="shop__board-price">$799<sup>99</sup></p>
               <a href="#" class="btn-common">drop <span>in</span></a>
             </div>
-            <div><img src="img/shop/board.png" alt="board"></div>
+            <div class="shop__img-holder"><img src="img/shop/board.png" alt="board"></div>
             <div class="extras">
               <p class="extras__title title title--small">extras</p>
               <ul class="extras__list">
