--- a/app/index.html
+++ b/app/index.html
@@ -653,6 +653,13 @@
                 </div>
                 <div class="surfboard__content">Double Concave with Vee Shape low point</div>
               </div>
+              <div class="surfboard__point" style="top: 10px">
+                <div class="surfboard__circle">
+                  <div class="surfboard__strip"></div>
+                  <div class="surfboard__strip"></div>
+                </div>
+                <div class="surfboard__content">Double Concave with Vee Shape low point</div>
+              </div>
             </div>
             <div class="extras">
               <p class="extras__title title title--small">extras</p>
