--- a/app/index.html
+++ b/app/index.html
@@ -646,14 +646,21 @@
             </div>
             <div class="surfboard">
               <img src="img/shop/board.png" alt="board">
-              <div class="surfboard__point">
+              <div class="surfboard__point surfboard__point--1 surfboard__point--right">
                 <div class="surfboard__circle">
                   <div class="surfboard__strip"></div>
                   <div class="surfboard__strip"></div>
                 </div>
                 <div class="surfboard__content">Double Concave with Vee Shape low point</div>
               </div>
-              <div class="surfboard__point" style="top: 10px">
+              <div class="surfboard__point surfboard__point--2 surfboard__point--left">
+                <div class="surfboard__circle">
+                  <div class="surfboard__strip"></div>
+                  <div class="surfboard__strip"></div>
+                </div>
+                <div class="surfboard__content">Double Concave with Vee Shape low point</div>
+              </div>
+              <div class="surfboard__point surfboard__point--3 surfboard__point--left">
                 <div class="surfboard__circle">
                   <div class="surfboard__strip"></div>
                   <div class="surfboard__strip"></div>
