--- a/app/index.html
+++ b/app/index.html
@@ -684,14 +684,17 @@
               </ul>
             </div>
           </div>
-          
-
-
         </div>
-
       </div>
     </div>
   </section>
+
+  <footer class="footer">
+    <div class="footer__content">
+      <a href="#" class="btn-common btn-surf btn-footer">go <span>surf</span></a>
+      <p class="footer__text">© Go-Surf 2018. All Rights Reserved.</p>
+    </div>
+  </footer>
   
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/libs.min.js"></script>
