--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
     </div>
 
     <aside class="aside">
-      <a href="#" class="aside__logo"><img src="img/header/logo.svg" alt="logo"></a>
+      <a href="#" class="aside__logo"><img src="img/header/logo.svg" alt="logo" class="aside__logo-img"></a>
       <div class="aside__content">
         <nav>
           <ul class="menu">
