header has optimized

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
           <path class="map__line map__line--animation" id="north-line" d="M727 78C700.714 108.208 578.5 209 536 158.5C472.5 105 441.777 226.418 367.5 217.5" stroke="white" stroke-width="2"/>
           <!-- NORTH SHORE POINT -->
           <path fill-rule="evenodd" clip-rule="evenodd" d="M365 221C366.657 221 368 219.657 368 218C368 216.343 366.657 215 365 215C363.343 215 362 216.343 362 218C362 219.657 363.343 221 365 221Z" fill="#4AF6CD"/>
-          <text class="location-point__text" x="145" y="240">North Shore | Santa Maria, CA</text>
+          <text class="location-point__text north-shore__text" x="145" y="240">North Shore | Santa Maria, CA</text>
         </g>
 
         <g id="west-shore">
