--- a/app/index.html
+++ b/app/index.html
@@ -470,62 +470,80 @@
 
       <div class="surf-slider">
         <ul class="surf-list">
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-1.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-1.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-2.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-2.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-3.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-3.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-4.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-4.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-5.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-5.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-6.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-6.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-7.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California <span>|</span> USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-7.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California <span>|</span> USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
-          <li class="surf-card" style="background-image: url('img/surf/surf-slider/slide-8.jpg')">
-            <div class="surf-card__inner">
-              <h3 class="surf-card__title">Malibu Beach</h3>
-              <p class="surf-card__location">California | USA</p>
-              <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+          <li>
+            <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-8.jpg')">
+              <div class="surf-card__inner">
+                <h3 class="surf-card__title">Malibu Beach</h3>
+                <p class="surf-card__location">California | USA</p>
+                <a href="#" class="btn-common btn-surf">view <span>surf</span></a>
+              </div>
             </div>
           </li>
+
         </ul>
       </div>
     </div>
