work for surf map

--- a/app/index.html
+++ b/app/index.html
@@ -264,7 +264,7 @@
       <div class="surf-map">
         <ul class="surf-map__list">
 
-          <li class="surf-map__item surf-map__item--1">
+          <li class="surf-map__item surf-map__item--1" id="surf-point-1">
 
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
@@ -290,7 +290,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--2">
+          <li class="surf-map__item surf-map__item--2" id="surf-point-2">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
@@ -315,7 +315,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--3">
+          <li class="surf-map__item surf-map__item--3" id="surf-point-3">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
@@ -340,7 +340,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--4">
+          <li class="surf-map__item surf-map__item--4" id="surf-point-4">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
@@ -365,7 +365,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--5">
+          <li class="surf-map__item surf-map__item--5" id="surf-point-5">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
@@ -390,7 +390,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--6">
+          <li class="surf-map__item surf-map__item--6" id="surf-point-6">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
@@ -415,7 +415,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--7">
+          <li class="surf-map__item surf-map__item--7" id="surf-point-7">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
@@ -440,7 +440,7 @@
             </div>
             <div class="surf-map__circle"></div>
           </li>
-          <li class="surf-map__item surf-map__item--8">
+          <li class="surf-map__item surf-map__item--8" id="surf-point-8">
             <div class="surf-map__content-box">
               <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
               <p class="surf-map__beach">Airlie Beach</p>
