added media queries for travel section

--- a/app/index.html
+++ b/app/index.html
@@ -552,7 +552,7 @@
   </section>
 
   <section class="travel" id="travel">
-    <div class="container">
+    <div class="container container--travel">
       <h2 class="title title--line travel__title">travel<span class="title-shadow travel__title-shadow">travel</span></h2>
 
       <div class="travel__slider">
