fixed travel background

--- a/app/index.html
+++ b/app/index.html
@@ -561,8 +561,10 @@
 
           <div class="travel-head">
             <img src="img/travel/airlie-beach/airlie-beach.png" class="travel-head__beach" alt="beach">
-            <p class="suptitle suptitle--left travel-head__suptitle">Shore</p>
-            <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
+            <div class="travel-head__title">
+              <p class="suptitle suptitle--left travel-head__suptitle">Shore</p>
+              <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
+            </div>
           </div>
 
           <div class="travel-airline">
