--- a/app/index.html
+++ b/app/index.html
@@ -606,8 +606,10 @@
 
           <div class="sleep-head">
             <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort"></img>
-            <p class="suptitle suptitle--left sleep-head__suptitle">Resorts</p>
-            <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
+            <div class="sleep-head__title">
+              <p class="suptitle suptitle--left sleep-head__suptitle">Resorts</p>
+              <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
+            </div>
           </div>
 
           <div class="sleep-raiting">
