--- a/app/index.html
+++ b/app/index.html
@@ -575,19 +575,19 @@
           <ul class="travel-info">
             <li class="travel-info__item">
               <h3 class="travel-info__title">Destination</h3>
-              <p class="travel-info__text">Queensland Australia</p>
+              <p class="travel-info__text text-common">Queensland Australia</p>
             </li>
             <li class="travel-info__item">
               <h3 class="travel-info__title">Distance</h3>
-              <p class="travel-info__text">7,065 Miles</p>
+              <p class="travel-info__text text-common">7,065 Miles</p>
             </li>
             <li class="travel-info__item">
               <h3 class="travel-info__title">Travel Time</h3>
-              <p class="travel-info__text">23 Hours <br>5 Minutes</p>
+              <p class="travel-info__text text-common">23 Hours <br>5 Minutes</p>
             </li>
             <li class="travel-info__item">
               <h3 class="travel-info__title">Pricing</h3>
-              <p class="travel-info__text">$1,976 USD</p>
+              <p class="travel-info__text text-common">$1,976 USD</p>
               <span class="travel-info__suptext">Round Trip</span>
             </li>
           </ul>
@@ -620,12 +620,12 @@
           <ul class="sleep-info">
             <li class="sleep-info__item">
               <h3 class="sleep-info__title">Resort</h3>
-              <p class="sleep-info__text">Auberge<br>Australia</p>
+              <p class="sleep-info__text text-common">Auberge<br>Australia</p>
             </li>
             <li class="sleep-info__item">
               <h3 class="sleep-info__title"># of Nights</h3>
 
-              <div class="sleep-info__text">
+              <div class="sleep-info__text text-common">
 
                 <input class="sleep-info__number sleep-info__nights" type="number" min="1" max="9" value="5" readonly>
                 <span>Nights</span>
@@ -638,7 +638,7 @@
             </li>
             <li class="sleep-info__item">
               <h3 class="sleep-info__title"># of Guests</h3>
-              <div class="sleep-info__text">
+              <div class="sleep-info__text text-common">
 
                 <input class="sleep-info__number sleep-info__guests" type="number" min="1" max="9" value="4" readonly>
                 <span>Guests</span>
