some changes on travel

--- a/app/index.html
+++ b/app/index.html
@@ -575,7 +575,7 @@
           <ul class="travel-info">
             <li class="travel-info__item">
               <h3 class="travel-info__title">Destination</h3>
-              <p class="travel-info__text text-common">Queensland Australia</p>
+              <p class="travel-info__text text-common">Queensland<br> Australia</p>
             </li>
             <li class="travel-info__item">
               <h3 class="travel-info__title">Distance</h3>
@@ -650,7 +650,7 @@
             </li>
             <li class="sleep-info__item">
               <h3 class="sleep-info__title">Pricing</h3>
-              <p class="sleep-info__text"><span>$</span><span class="sleep-info__price"></span></p>
+              <p class="sleep-info__text text-common"><span>$</span><span class="sleep-info__price"></span></p>
               <span class="sleep-info__suptext">Per Night</span>
             </li>
           </ul>
