--- a/app/index.html
+++ b/app/index.html
@@ -256,7 +256,7 @@
     <div class="container">
       <h2 class="title title--line surf__title">surf<span class="title-shadow surf__title-shadow">surf</span></h2>
 
-      <div class="surf__content">
+      <div class="surf__content wow fadeInRight" data-wow-offset="350">
         <p class="suptitle suptitle--left surf__location">current location</p>
         <h3 class="title title--small">california <span>|</span> usa</h3>
       </div>
@@ -561,7 +561,7 @@
 
           <div class="travel-head">
             <img src="img/travel/airlie-beach/airlie-beach.png" class="travel-head__beach" alt="beach">
-            <div class="travel-head__title">
+            <div class="travel-head__title wow fadeInRight" data-wow-offset="350">
               <p class="suptitle suptitle--left travel-head__suptitle">Shore</p>
               <h3 class="title title--small">Airlie Beach <span>|</span> Australia</h3>
             </div>
@@ -573,19 +573,19 @@
           </div>
 
           <ul class="travel-info">
-            <li class="travel-info__item">
+            <li class="travel-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.1s">
               <h3 class="travel-info__title">Destination</h3>
               <p class="travel-info__text text-common">Queensland<br> Australia</p>
             </li>
-            <li class="travel-info__item">
+            <li class="travel-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.3s">
               <h3 class="travel-info__title">Distance</h3>
               <p class="travel-info__text text-common">7,065 Miles</p>
             </li>
-            <li class="travel-info__item">
+            <li class="travel-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.6s">
               <h3 class="travel-info__title">Travel Time</h3>
               <p class="travel-info__text text-common">23 Hours <br>5 Minutes</p>
             </li>
-            <li class="travel-info__item">
+            <li class="travel-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.9s">
               <h3 class="travel-info__title">Pricing</h3>
               <p class="travel-info__text text-common">$1,976 USD</p>
               <span class="travel-info__suptext">Round Trip</span>
@@ -606,7 +606,7 @@
 
           <div class="sleep-head">
             <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort"></img>
-            <div class="sleep-head__title">
+            <div class="sleep-head__title wow fadeInRight" data-wow-offset="350">
               <p class="suptitle suptitle--left sleep-head__suptitle">Resorts</p>
               <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
             </div>
@@ -618,11 +618,11 @@
           </div>
 
           <ul class="sleep-info">
-            <li class="sleep-info__item">
+            <li class="sleep-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.1s">
               <h3 class="sleep-info__title">Resort</h3>
               <p class="sleep-info__text text-common">Auberge<br>Australia</p>
             </li>
-            <li class="sleep-info__item">
+            <li class="sleep-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.3s">
               <h3 class="sleep-info__title"># of Nights</h3>
 
               <div class="sleep-info__text text-common">
@@ -636,7 +636,7 @@
               </div>
 
             </li>
-            <li class="sleep-info__item">
+            <li class="sleep-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.6s">
               <h3 class="sleep-info__title"># of Guests</h3>
               <div class="sleep-info__text text-common">
 
@@ -648,7 +648,7 @@
                 </div>
               </div>
             </li>
-            <li class="sleep-info__item">
+            <li class="sleep-info__item wow fadeInUp" data-wow-offset="200" data-wow-delay="0.9s">
               <h3 class="sleep-info__title">Pricing</h3>
               <p class="sleep-info__text text-common"><span>$</span><span class="sleep-info__price"></span></p>
               <span class="sleep-info__suptext">Per Night</span>
