--- a/app/index.html
+++ b/app/index.html
@@ -265,7 +265,7 @@
         <div class="surf-map">
           <ul class="surf-map__list" id="surf-map-list">
 
-            <li class="surf-map__item surf-map__item--1" data-top="1.86" data-left="0">
+            <li class="surf-map__item surf-map__item--1 wow zoomIn" data-top="1.86" data-left="0">
 
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
@@ -291,7 +291,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--2" data-top="2.351" data-left="9.022">
+            <li class="surf-map__item surf-map__item--2 wow zoomIn" data-top="2.351" data-left="9.022">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -316,7 +316,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--3" data-top="1.984" data-left="3.647">
+            <li class="surf-map__item surf-map__item--3 wow zoomIn" data-top="1.984" data-left="3.647">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -341,7 +341,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--4" data-top="2.645" data-left="2.330">
+            <li class="surf-map__item surf-map__item--4 wow zoomIn" data-top="2.645" data-left="2.330">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -366,7 +366,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--5" data-top="1.173" data-left="1.875">
+            <li class="surf-map__item surf-map__item--5 wow zoomIn" data-top="1.173" data-left="1.875">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -391,7 +391,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--6" data-top="1.628" data-left="1.492">
+            <li class="surf-map__item surf-map__item--6 wow zoomIn" data-top="1.628" data-left="1.492">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -416,7 +416,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--7" data-top="1.237" data-left="1.116">
+            <li class="surf-map__item surf-map__item--7 wow zoomIn" data-top="1.237" data-left="1.116">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -441,7 +441,7 @@
               </div>
               <div class="surf-map__circle"></div>
             </li>
-            <li class="surf-map__item surf-map__item--8" data-top="1.237" data-left="3">
+            <li class="surf-map__item surf-map__item--8 wow zoomIn" data-top="1.237" data-left="3">
               <div class="surf-map__content-box">
                 <a href="#" class="surf-map__surf-link"><img src="img/header/arrow-right.svg" alt=""></a>
                 <p class="surf-map__beach">Airlie Beach</p>
@@ -472,7 +472,7 @@
 
       <div class="surf-slider">
         <ul class="surf-list">
-          <li>
+          <li class="wow slideInLeft" data-wow-delay="0s">
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-1.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -481,7 +481,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="wow slideInLeft" data-wow-delay="0.1s">
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-2.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -490,7 +490,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="wow slideInLeft" data-wow-delay="0.2s">
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-3.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -499,7 +499,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="wow slideInLeft" data-wow-delay="0.3s">
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-4.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -509,7 +509,7 @@
             </div>
           </li>
 
-          <li>
+          <li class="wow slideInLeft" data-wow-delay="0.4s">
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-5.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -518,7 +518,7 @@
               </div>
             </div>
           </li>
-          <li>
+          <li class="wow slideInLeft" data-wow-delay="0.5s">
             <div class="surf-card" style="background-image: url('img/surf/surf-slider/slide-6.jpg')">
               <div class="surf-card__inner">
                 <h3 class="surf-card__title">Malibu Beach</h3>
@@ -674,7 +674,7 @@
               <p class="shop__board-price">$799<sup>99</sup></p>
               <a href="#" class="btn-common">drop <span>in</span></a>
             </div>
-            <div class="surfboard">
+            <div class="surfboard wow jackInTheBox" data-wow-offset="350">
               <img src="img/shop/board.png" alt="board">
               <div class="surfboard__point surfboard__point--1 surfboard__point--right">
                 <div class="surfboard__circle">
@@ -721,7 +721,7 @@
 
   <footer class="footer" id="footer">
     <div class="footer__content">
-      <a href="#" class="btn-common btn-surf btn-footer" data-scroll="#header">go <span>surf</span></a>
+      <a href="#" class="btn-common btn-surf btn-footer wow pulse" data-scroll="#header">go <span>surf</span></a>
       <p class="footer__text">© Go-Surf 2018. All Rights Reserved.</p>
     </div>
   </footer>
