--- a/app/index.html
+++ b/app/index.html
@@ -189,7 +189,7 @@
           <h2 class="title">North Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt="">
         </div>
       </div>
 
@@ -199,7 +199,7 @@
           <h2 class="title">West Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Normal</p>
-          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt="">
         </div>
       </div>
 
@@ -209,7 +209,7 @@
           <h2 class="title">East Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Moderate</p>
-          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt="">
         </div>
       </div>
 
@@ -219,7 +219,7 @@
           <h2 class="title">South Shore</h2>
           <p class="suptitle suptitle--left">Condition</p>
           <p class="title title--small">Radical</p>
-          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt=""></img>
+          <img class="slider-arrow slider-arrow-right slider-arrow-bottom" src="img/header/arrow-right.svg" alt="">
         </div>
       </div>
     </div>
@@ -630,8 +630,8 @@
                 <input class="sleep-info__number sleep-info__nights" type="number" min="1" max="9" value="5" readonly>
                 <span>Nights</span>
                 <div class="sleep-info__symbols">
-                  <div class="sleep-info__symbol minus" href="#"></div>
-                  <div class="sleep-info__symbol plus" href="#"></div>
+                  <div class="sleep-info__symbol minus"></div>
+                  <div class="sleep-info__symbol plus"></div>
                 </div>
               </div>
 
@@ -643,8 +643,8 @@
                 <input class="sleep-info__number sleep-info__guests" type="number" min="1" max="9" value="4" readonly>
                 <span>Guests</span>
                 <div class="sleep-info__symbols">
-                  <div class="sleep-info__symbol minus" href="#"></div>
-                  <div class="sleep-info__symbol plus" href="#"></div>
+                  <div class="sleep-info__symbol minus"></div>
+                  <div class="sleep-info__symbol plus"></div>
                 </div>
               </div>
             </li>
