--- a/app/index.html
+++ b/app/index.html
@@ -605,7 +605,7 @@
         <div class="sleep__slider-item">
 
           <div class="sleep-head">
-            <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort"></img>
+            <img src="img/sleep/resort1.png" alt="resort" class="sleep-head__resort">
             <div class="sleep-head__title wow fadeInRight" data-wow-offset="350">
               <p class="suptitle suptitle--left sleep-head__suptitle">Resorts</p>
               <h3 class="title title--small">Auberge <span>|</span> Australia</h3>
