fixed background src

--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Go Surf</title>
   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,500,800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.min.css">
+  <link rel="stylesheet" href="css/style/style.min.css">
 </head>
 <body class="body">
   
@@ -273,17 +273,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -298,17 +298,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -323,17 +323,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -348,17 +348,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -373,17 +373,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -398,17 +398,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -423,17 +423,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
@@ -448,17 +448,17 @@
                 <p class="surf-map__location">Australia</p>
                 <ul class="surf-map__conditions-list">
                   <li>
-                    <img src="/img/surf/waves.png" alt="waves">
+                    <img src="img/surf/waves.png" alt="waves">
                     <p class="surf-map__coditions-value">9 - 13</p>
                     <p class="surf-map__coditions-text">Surf (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/tide.png" alt="tide">
+                    <img src="img/surf/tide.png" alt="tide">
                     <p class="surf-map__coditions-value">+2.3</p>
                     <p class="surf-map__coditions-text">TIDE (FT)</p>
                   </li>
                   <li>
-                    <img src="/img/surf/wind.png" alt="wind">
+                    <img src="img/surf/wind.png" alt="wind">
                     <p class="surf-map__coditions-value">4 SE</p>
                     <p class="surf-map__coditions-text">wind (kts)</p>
                   </li>
