--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0" url="https://roixxx.github.io/gosurf/app/index.html" />
+<meta http-equiv="refresh" content="0" url="https://roixxx.github.io/go-surf/app/index.html" />
